# cc-cloud-automation

./: README.md
framework/pycloudstack/: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
framework/pycloudstack/pycloudstack/: artifacts.py  cluster.py  cmdrunner.py  dut.py  msr.py  registry.py  virtxml.py  vmguest.py  vmimg.py  vmm.py  vmparam.py
framework/pycloudstack/pycloudstack/templates/: legacy-base-perf.xml  legacy-base.xml  ovmf-base-perf.xml  ovmf-base.xml  sgx-base.xml  tdx-base-perf.xml  tdx-base.xml
test/: README.md
tests/: README.md  artifacts.yaml.template  requirements.txt  run.sh  setupenv.sh
tests/tests/: conftest.py  nginx-bench.sh  pytest.ini  redis-bench.sh  test_acpi_reboot.py  test_acpi_shutdown.py  test_amx_docker_tf.py  test_amx_vm_tf.py  test_max_cpu.py  test_multiple_tdvms.py  test_tdvm_lifecycle.py  test_tdvm_network.py  test_tdvm_tsc.py  test_tdx_guest_status.py  test_tdx_host_status.py  test_vm_coexist.py  test_vm_reboot_qga.py  test_vm_shutdown_mode.py  test_vm_shutdown_qga.py  test_workload_nginx.py  test_workload_redis.py
